--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kmoiseenko/apod_bot#readme",
   "devDependencies": {
+    "cron": "^1.3.0",
     "jsonfile": "^4.0.0",
     "node-telegram-bot-api": "^0.29.0",
     "xmlhttprequest": "^1.8.0"
