--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/kmoiseenko/apod_bot#readme",
   "devDependencies": {
     "cron": "^1.3.0",
-    "jsonfile": "^4.0.0",
+    "mongodb": "^3.0.1",
     "node-telegram-bot-api": "^0.29.0",
     "xmlhttprequest": "^1.8.0"
   }
